# hardware_ws

./: JETSON_SERIAL_QUICKSTART.md  README.md
esp32/esp32_motor_servo_bridge/: esp32_motor_servo_bridge.ino
src/motor_serial_bridge_cpp/: CMakeLists.txt  README.md  package.xml
src/motor_serial_bridge_cpp/config/: joy_to_ackermann.yaml  keyboard_to_ackermann.yaml  motor_serial_bridge.yaml
src/motor_serial_bridge_cpp/include/motor_serial_bridge_cpp/: README.md
src/motor_serial_bridge_cpp/launch/: joy_to_ackermann.launch.py  keyboard_to_ackermann.launch.py  motor_serial_bridge.launch.py
src/motor_serial_bridge_cpp/src/: joy_to_ackermann_node.cpp  keyboard_to_ackermann_node.cpp  motor_serial_bridge_node.cpp
